# killhouse

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: validate.yml
.killhouse/: config.example.json
TODO/: conductor-plan.md  validate-adr-code-drift.md
evals/: killhouse-routing.json  run_readonly.py
loops/: ARCHITECTURE_DESIGN.md  CODE_REVIEW_TRIBUNAL.md  CONDUCT.md  DELEGATION_LOG.md  IMPLEMENT_MILESTONE.md  PLAN.md  REVIEW_DOCUMENT.md  SKILL_REVIEW.md  VALIDATE.md
schemas/: conductor_plan.sample.json  conductor_plan.schema.json  delegation_record.sample.json  delegation_record.schema.json
skills/: NOTICE.md  to-prd.md
skills/ask-kh/: SKILL.md
skills/ask-kh/references/: autonomy.md
skills/classify/: SKILL.md
skills/domain-modeling/: ADR-FORMAT.md  SKILL.md
skills/grill-with-docs/: SKILL.md
skills/grilling/: SKILL.md
skills/install-killhouse/: SKILL.md
skills/skill-review/: SKILL.md
skills/to-prd/: SKILL.md
skills/triage/: SKILL.md
tests/: test_adr_drift.py  test_bump_plugin_version.py  test_conductor_plan.py  test_conductor_run.py  test_delegation_log.py  test_evolve_exec_prompt.py  test_gate_replay.py
