# Tooling config for Killhouse's Python surface (bin/ and tests/).
# The repo ships no installable package; these tables only configure ruff and mypy.
# There is deliberately no [project] table (its required `version` would drift from
# plugin.json, which bin/bump_plugin_version.py owns). The supported Python floor is
# 3.11, declared here via the ruff/mypy pins and documented in the README Quickstart.

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["lib"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
# E402: several bin/ scripts and tests deliberately insert sys.path before importing a
# sibling bin module; the imports cannot precede that line.
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["bin", "tests"]
exclude = "^lib/"
ignore_missing_imports = true
check_untyped_defs = true
# Legacy scripts predate typing; do not fail the build on their missing annotations.
disallow_untyped_defs = false
